[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/menus/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/liberation/LiberationMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Themes/Menu.tres" type="Theme" id=3]
[ext_resource path="res://scenes/menus/MenuBackdrop.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBackdrop" parent="." instance=ExtResource( 4 )]

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 349.0
margin_bottom = 52.0
theme = ExtResource( 3 )
text = "Assembler Exemplar"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.6
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 77.0
margin_bottom = 36.0
text = "Start"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 77.0
margin_bottom = 76.0
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 77.0
margin_bottom = 116.0
text = "Quit"

[node name="VersionLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -5.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "version"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
